dist/1.0/bin/sample/retrieveUnpackaged/objects/Component_Tariff__c.object
<CustomObject>
    <fields>
        <fullName>Component_Line__c</fullName>
        <description>Relation to Component Line</description>
        <inlineHelpText>Relation to Component Line</inlineHelpText>
        <label>Component Line</label>
        <referenceTo>Component_Line__c</referenceTo>
        <relationshipLabel>Component Tariffs</relationshipLabel>
        <relationshipName>Component_Tariffs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Record_Id__c</fullName>
        <description>Unique Relationship identifier which can be used for data synchronization between diferent systems</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique Relationship identifier which can be used for data synchronization between diferent systems</inlineHelpText>
        <label>Source Record Id</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Tariff__c</fullName>
        <description>Relation to Tariff</description>
        <inlineHelpText>Relation to Tariff</inlineHelpText>
        <label>Tariff</label>
        <referenceTo>Tariff__c</referenceTo>
        <relationshipLabel>Component Tariffs</relationshipLabel>
        <relationshipName>Component_Tariffs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Component Tariff</label>
    <nameField>
        <displayFormat>CT-{000000000}</displayFormat>
        <label>Component Tariff Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Component Tariffs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>